# InTheVoid

./: .bowerrc  .env  .gitignore  Cargo.toml  bitbucket-pipelines.yml  bower.json
migrations/20170526040322_create_issues/: down.sql  up.sql
migrations/20170526041945_create_images/: down.sql  up.sql
src/: main.rs
src/models/: context.rs  db.rs  form.rs  json.rs  mod.rs  navigation.rs  path.rs
src/routes/: helpdesk.rs  index.rs  mod.rs  share.rs  statikk.rs
statikk/css/: style.css
statikk/js/: helpdesk_new.js
templates/common/: layout.html.hbs
templates/helpdesk/: index.html.hbs  new.html.hbs
