[package]
name = "inthevoid"
version = "0.1.0"
authors = ["noah"]

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "handlebars_templates"]

[dependencies.uuid]
version = "0.4"
features = ["v4"]

[dependencies.diesel]
version = "0.13.0"
features = ["sqlite"]

[dependencies.diesel_codegen]
version = "0.13.0"
features = ["sqlite"]